another fix for z-index flicker when scrolling on mobile

--- a/ff.css
+++ b/ff.css
@@ -149,8 +149,12 @@ h1, h2, h3, p {
         background-color: white;
         height: 100vh;
         width: 100%;
-        z-index: 10;
         overflow-x: hidden;
+        z-index: 10;
+        -webkit-transform: translateZ(1px);
+        -moz-transform: translateZ(1px);
+        -o-transform: translateZ(1px);
+        transform: translateZ(1px);
     }
 
     .tag-form {
